# Main_PSI

./: .gitignore  README.md  build.ps1  camera.py  coordinate_system.py  fanuc_py_xyw_chunk_debug.py  globals.py  main.py  main.spec  vision.py
Main_PSI/: pyproject.toml
Main_PSI/main_psi/: README.md  camera.py  coordinate_system.py  fanuc_py_xyw_chunk_debug.py  globals.py  main.py  vision.py
Project/txt/: config.txt
txt/: config.txt
