[tool.poetry]
name = "main-psi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
tk = "^0.1"
customtkinter = "^5.2"
pillow = "^11.0.0"
pandas = "^2.0"
numpy = "^2.0"
opencv-python = "^4.10"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.10.0"
pycln = "^2.4"            
isort = "^5.13"
pydocstyle = "^6.3"
mypy = "^1.12"
ruff = "^0.6"
pylint = "^3.3"
pre-commit = "^4.0"

[build-system]
requires = ["poetry-core>=1.8"]
build-backend = "poetry.core.masonry.api"
